-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: core-libs
-
b75
-
x86_64
-
linux_oracle_6.0
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8135997 | emb-9 | Jean-Francois Denise | P2 | Resolved | Fixed | team |
There is a suspicious assert failure with the following stack:
V [libjvm.so+0xa9793a] VMError::report_and_die()+0x19a;; VMError::report_and_die()+0x19a
V [libjvm.so+0x3e2b56] report_vm_error(char const*, int, char const*, char const*)+0x76;; report_vm_error(char const*, int, char const*, char const*)+0x76
V [libjvm.so+0x654f62] JNIHandles::resolve_non_null(_jobject*)+0x1d2;; JNIHandles::resolve_non_null(_jobject*)+0x1d2
V [libjvm.so+0x6429f6] jni_GetLongArrayElements+0x156;; jni_GetLongArrayElements+0x156
C [libjava.so+0xc0bd] Java_jdk_internal_jimage_ImageNativeSubstrate_findAttributes+0x5d;; Java_jdk_internal_jimage_ImageNativeSubstrate_findAttributes+0x5d
j jdk.internal.jimage.ImageNativeSubstrate.findAttributes(J[B)[J+0
j jdk.internal.jimage.ImageNativeSubstrate.findLocation(Ljdk/internal/jimage/UTF8String;Ljdk/internal/jimage/ImageStringsReader;)Ljdk/internal/jimage/ImageLocation;+8
...
V [libjvm.so+0xa9793a] VMError::report_and_die()+0x19a;; VMError::report_and_die()+0x19a
V [libjvm.so+0x3e2b56] report_vm_error(char const*, int, char const*, char const*)+0x76;; report_vm_error(char const*, int, char const*, char const*)+0x76
V [libjvm.so+0x654f62] JNIHandles::resolve_non_null(_jobject*)+0x1d2;; JNIHandles::resolve_non_null(_jobject*)+0x1d2
V [libjvm.so+0x6429f6] jni_GetLongArrayElements+0x156;; jni_GetLongArrayElements+0x156
C [libjava.so+0xc0bd] Java_jdk_internal_jimage_ImageNativeSubstrate_findAttributes+0x5d;; Java_jdk_internal_jimage_ImageNativeSubstrate_findAttributes+0x5d
j jdk.internal.jimage.ImageNativeSubstrate.findAttributes(J[B)[J+0
j jdk.internal.jimage.ImageNativeSubstrate.findLocation(Ljdk/internal/jimage/UTF8String;Ljdk/internal/jimage/ImageStringsReader;)Ljdk/internal/jimage/ImageLocation;+8
...
- backported by
-
JDK-8135997 'assert(handle != __null) failed: JNI handle should not be null' in jni_GetLongArrayElements
-
- Resolved
-
- relates to
-
JDK-8241478 vmTestbase/gc/gctests/Steal/steal001/steal001.java fails with OOME
-
- Resolved
-