8130344: assert(handle != __null) failed: JNI handle should not be null' in jni_GetLongArrayElements Summary: Check JNI NewArray for NULL value Reviewed-by: lfoltan, alanb, dholmes